--- a/gcp-dbt2-biganimal/02_deploy/playbook-deploy.yml
+++ b/gcp-dbt2-biganimal/02_deploy/playbook-deploy.yml
@@ -8,13 +8,16 @@
     - edb_devops.edb_postgres
 
   pre_tasks:
+    - ansible.builtin.wait_for_connection:
+      delay: 5
+      timeout: 600
+
+    - name: Gather facts for first time
+      ansible.builtin.setup:
+
     - name: Initialize the user defined variables
       set_fact:
         enable_edb_repo: false
-
-    - name: Create {{ pg_owner }} OS user
-      ansible.builtin.user:
-        name: "{{ pg_owner }}"
 
     - name: Create {{ pg_owner }} OS user
       ansible.builtin.user:
