Fix deploy playbook to wait for instance availability

--- a/gcp-dbt2-biganimal/02_deploy/playbook-deploy.yml
+++ b/gcp-dbt2-biganimal/02_deploy/playbook-deploy.yml
@@ -1,8 +1,8 @@
 ---
-- hosts: dbt2_driver
-  name: Install DBT2 driver
+- hosts: all
+  name: Install repository
   become: true
-  gather_facts: true
+  gather_facts: false
 
   collections:
     - edb_devops.edb_postgres
@@ -24,8 +24,23 @@
         name: "{{ pg_owner }}"
 
   roles:
-    - setup_repo
-    - setup_dbt2_driver
+    - role: setup_repo
+
+- hosts: dbt2_driver
+  name: Install DBT2 driver
+  become: true
+  gather_facts: true
+
+  collections:
+    - edb_devops.edb_postgres
+
+  pre_tasks:
+    - name: Create {{ pg_owner }} OS user
+      ansible.builtin.user:
+        name: "{{ pg_owner }}"
+
+  roles:
+    - role: setup_dbt2_driver
 
   tasks:
     - name: Update /var/lib/pgsql/.pgpass
