Fix execute playbook comment

--- a/gcp-dbt2-biganimal/04_execute/playbook-dbt2-run.yml
+++ b/gcp-dbt2-biganimal/04_execute/playbook-dbt2-run.yml
@@ -52,7 +52,7 @@
       ansible.builtin.command:
         cmd: >-
           dbt2 run
-            --comment "BigAnimal PostgreSQL {{ infra.servers.biganimal.dbt2.all.instance_type }} | {{ infra.servers.biganimal.dbt2.all.storage.0.size }} {{ infra.servers.biganimal.dbt2.all.storage.0.volume_type }} | {{ infra.servers.biganimal.dbt2.all.storage.0.iops }} IOPS | Driver {{ driver_instance_type }}"
+            --comment "BigAnimal PostgreSQL {{ infra.servers.biganimal.dbt2.all.instance_type }} | {{ infra.servers.biganimal.dbt2.all.storage.size }} {{ infra.servers.biganimal.dbt2.all.storage.volume_type }} | {{ infra.servers.biganimal.dbt2.all.storage.iops }} IOPS | Driver {{ driver_instance_type }}"
             --connection-delay={{ connection_delay }}
             --connections-per-processor={{ fpp }}
             --db-host={{ address.stdout_lines[-1] }}
