Fix handling of saving core files
coredumpctl return 0 if there are core files and 1 if there are no core
file.  So handle the non-zero case correctly to not throw an error.

coredumpctl throws other non-zero codes if there are errors.

--- a/roles/get-system-details/tasks/main.yml
+++ b/roles/get-system-details/tasks/main.yml
@@ -62,14 +62,15 @@
   when: pg_log is defined and pg_log_filename is defined
 
 # coredumpctl will fail if in the middle of processing a coredump, give it up
-# to an hour to finish.
+# to an hour to finish.  It also returns 1 if there are no cores.
 - name: Capture coredumpctl info output
   ansible.builtin.shell:
     cmd: coredumpctl info
   retries: 60
   delay: 60
   register: coredumpctl
-  until: coredumpctl.rc == 0
+  until: coredumpctl.rc == 0 or coredumpctl.rc == 1
+  failed_when: coredumpctl.rc != 0 and coredumpctl.rc != 1
   become: true
 
 - name: Save coredumpctl info output
