get-aws-cloudwatch-aurora-postgres-stats process-metrics cleanup
* prefer with_items over loop
* remove unused register variables

--- a/aws-dbt2-biganimal/02_deploy/playbook-deploy.yml
+++ b/aws-dbt2-biganimal/02_deploy/playbook-deploy.yml
@@ -23,6 +23,7 @@
   roles:
     - setup_repo
     - setup_dbt2_driver
+    - setup_touchstone_tools
 
   tasks:
     - name: Update /var/lib/pgsql/.pgpass
