--- a/aws-dbt2-rds/02_deploy/playbook-deploy.yml
+++ b/aws-dbt2-rds/02_deploy/playbook-deploy.yml
@@ -24,7 +24,8 @@
     - edb_devops.edb_postgres
 
   roles:
-    - role: setup_dbt2_driver
+    - setup_dbt2_driver
+    - setup_touchstone_tools
 
   tasks:
     - name: Update .pgpass
