--- a/roles/get-aws-cloudwatch-aurora-postgres-stats/tasks/process-metrics.yml
+++ b/roles/get-aws-cloudwatch-aurora-postgres-stats/tasks/process-metrics.yml
@@ -47,3 +47,4 @@
       cmd: >-
         gnuplot -e "set terminal png size 1000,800; set output '{{ cloudwatch_directory }}/{{ item }}.png'; set xlabel 'Time'; set ylabel 'Average'; set timefmt '%Y-%m-%d, %H:%M'; set xdata time; set bmargin 10; set rmargin 10; set format x \"%y/%m/%d\n%H:%M\"; plot '{{ cloudwatch_directory }}/{{ item }}.csv' using 1:3 title '{{ item }}' with linespoints"
     with_items: "{{ metric_names }}"
+    ignore_errors: true
