aws-dbt2-aurora: set region when retrieving logs
This needs to be explicitly set.  Use the same region that the database
was created in.

--- a/aws-dbt2-aurora/04_execute/playbook-dbt2-run.yml
+++ b/aws-dbt2-aurora/04_execute/playbook-dbt2-run.yml
@@ -117,6 +117,7 @@
           --db-instance-identifier {{ infra.servers.aurora.postgres.resource_id.0 }}
           --log-file-name error/{{ item }}
           --starting-token 0
+          --region {{ infra.servers.aurora.postgres.region }}
           > {{ logs_directory }}/{{ item }}.json
       loop: 
         "{{ lookup('file', 'postgreslog.txt').splitlines() }}"
