gcp-dbt2-ce: save system logs
* need to explicitly set pg_log and pg_log_filename in order to save
  postgres logs
* enable core dump processing, just in case

--- a/gcp-dbt2-ce/04_execute/playbook-dbt2-run.yml
+++ b/gcp-dbt2-ce/04_execute/playbook-dbt2-run.yml
@@ -92,3 +92,7 @@
         src: "/tmp/dbt2-data.tar.gz"
         dest: "{{ results_directory }}/dbt2-data.tar.gz"
         flat: true
+
+    - name: Save system details
+      ansible.builtin.include_role:
+        name: get-system-details
