--- a/aws-pgd-3-nodes-camo/02_deploy/playbook-pgd-deploy.yml
+++ b/aws-pgd-3-nodes-camo/02_deploy/playbook-pgd-deploy.yml
@@ -29,25 +29,22 @@
         pgd_version: 5            # Postgres Distributed version
         enable_pgdg_repo: true    # flag/variable for enabling PGD repo
 
+        # Un-comment the desired commit scope to benchmark
         pgd_commit_scopes:
-          - cs_name: 'camo_scope_1'
-            cs_type: 'CAMO' # either camo or group_commit
-            parent_group: 'pgd_cluster' # this group is present in cluster
-            cs_origin_node_group: 'pgd_two_nodes' # this group may or may not be present
-            member_nodes: ['pgd1', 'pgd2']
-        #    default_group_cs: false # don't make mandatory, default('false') if not present in array
-        #    default_group_cs: true   # Intentional duplicate for testing
-            default_group_cs: true   # Intentional duplicate for testing
-            cs_rule: "ALL ( pgd_two_nodes ) ON visible CAMO DEGRADE ON (timeout=500s) TO ASYNC"
-        #  - cs_name: 'groupcommit_scope_1'
-        #    cs_type: 'GROUP_COMMIT'
-        #    parent_group: 'pgd_cluster'
-        #    cs_origin_node_group: 'pgd_remaining_nodes'
-        #    member_nodes: ['pgd3']
-        ##    member_nodes: ['pgd3','pgd2']  # Intentional duplicate for testing
-        #    default_group_cs: true  # Intentional duplicate for testing
-        ##    default_group_cs: false
-        #    cs_rule: "ALL ( pgd_remaining_nodes ) GROUP COMMIT"
+          # - cs_name: 'camo_scope_1'
+          #   cs_type: 'CAMO' # either camo or group_commit
+          #   parent_group: 'pgd_cluster' # this group is present in cluster
+          #   cs_origin_node_group: 'pgd_two_nodes' # this group may or may not be present
+          #   member_nodes: ['pgd1', 'pgd2']
+          #   default_group_cs: true
+          #   cs_rule: "ALL ( pgd_two_nodes ) ON visible CAMO DEGRADE ON (timeout=500s) TO ASYNC"
+          - cs_name: 'groupcommit_scope_1'
+            cs_type: 'GROUP_COMMIT'
+            parent_group: 'pgd_cluster'
+            cs_origin_node_group: 'pgd_remaining_nodes'
+            member_nodes: ['pgd3']
+            default_group_cs: true
+            cs_rule: "ALL ( pgd_remaining_nodes ) GROUP COMMIT"
 
   roles:
     - role: setup_repo
